Mon Jan 22 12:35:05 2001  Brian Gough  <bjg@network-theory.co.uk>

	* qmomof.c: moments are now precomputed in a read-only table
 	instead of being computed on the fly (cached)

Fri Dec  8 19:45:52 2000  Brian Gough  <bjg@network-theory.co.uk>

	* reorganized, made internal functions static

Thu Nov 16 19:45:19 2000  Brian Gough  <bjg@network-theory.co.uk>

	* qag_impl.c (gsl_integration_qag_impl): replace use of volatile
 	with the macro GSL_COERCE_DBL

Wed May 31 19:35:57 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): increased tolerances on some results to allow
 	tests to pass with other compilers

Mon May 15 14:21:00 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): increased one test limit slightly to allow for
 	rounding errors

Wed Feb 23 14:35:31 2000  Brian Gough  <bjg@network-theory.co.uk>

	* qpsrt.c (qpsrt): changed ordering of while conditions to avoid
 	segmentation faults due to accessing values before testing end of
 	loop condition. Thanks to Brett Viren
 	<bviren@superk.physics.sunysb.edu> for pointing this out.

	* qelg.c (qelg): changed update of nres from the original quadpack
 	so that uninitialized elements of the res3la array are never
 	accessed.

	* test.c (main): eliminate small memory leak from test

Mon Feb 14 13:45:04 2000  Brian Gough  <bjg@network-theory.co.uk>

	* qk.c: renamed function qk to gsl_integration_qk since it is
 	exported

	* err.c: made internal function rescale_err static, only used in
 	qk.c and qng.c

Mon Jul 12 11:37:55 1999  Brian Gough  <bjg@network-theory.co.uk>

	* qawc_impl.c (gsl_integration_qawc_impl): removed, no longer
 	necessary since everything goes into qawc.c

Fri Apr  2 20:57:09 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* qelg.c (qelg): removed debugging code

	* qpsrt.c (qpsrt): removed debugging code

Thu Mar 11 15:15:46 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* qags_impl.c (gsl_integration_qags_impl): removed dependency in