@@ -69,18 +69,18 @@ qc25f (gsl_function * f, double a, double b,
   else
     {
       double *moment;
-      double cheb12[13], cheb24[25], chebmo[25];
+      double cheb12[13], cheb24[25];
       double result_abs, res12_cos, res12_sin, res24_cos, res24_sin;
       double est_cos, est_sin;
       double c, s;
-      size_t i, j;
+      size_t i;
 
       gsl_integration_qcheb (f, a, b, cheb12, cheb24);
 
       if (level >= wf->n)
 	{
           /* table overflow should not happen, check before calling */
-          abort();
+          GSL_ERROR("table overflow in internal function", GSL_ESANITY);
 	}
 
       /* obtain moments from the table */
